--- a/curs-fazt/src/pages/sobreNosaltres.astro
+++ b/curs-fazt/src/pages/sobreNosaltres.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 
 ---
 
-<Layout title="Sobre nosaltres">
+<Layout titolPagina="Sobre nosaltres" descripcioPàgina="Sobre nosaltres i les nostres vides">
 	<h2>Sobre el nostre lloc web</h2>
 	<p>Elaborat per llopFilms &copy;2023</p>
 </Layout>
