--- a/curs-fazt/src/layouts/Layout.astro
+++ b/curs-fazt/src/layouts/Layout.astro
@@ -4,7 +4,6 @@ interface Props {
   descripcioPàgina?: string;
 }
 
-console.log('Props a Layout -->', Astro.props);
 const { titolPagina = 'Títol per defecte', descripcioPàgina } = Astro.props;
 ---
 
@@ -27,6 +26,6 @@ const { titolPagina = 'Títol per defecte', descripcioPàgina } = Astro.props;
   body {
     font-family: Ubuntu, sans-serif;
     background-color: #202020;
-    color: white;
+    color: #f0f0f0;
   }
 </style>
