--- a/curs-fazt/src/components/Servei.astro
+++ b/curs-fazt/src/components/Servei.astro
@@ -19,7 +19,7 @@ console.log('Servei -->', nomServei, "Contingut -->", contingut);
     background-color: #cac8c8;
     color:#202020;
     padding: 20px;
-    margin: 0 20px 40px 20px;
+    margin: 20px 20px 20px 20px;
     border-radius: 5px;
     box-shadow:
       0 2px 10px 0 rgb(255, 255, 255, 0.5),
