--- a/curs-fazt/src/pages/serveis.astro
+++ b/curs-fazt/src/pages/serveis.astro
@@ -1,6 +1,7 @@
 ---
 import Servei from '../components/Servei.astro';
 import Layout from '../layouts/Layout.astro';
+import BotoReton from '../components/BotoReton.astro';
 ---
 
 <Layout titolPagina='Serveis' descripcioPàgina='Serveis de les coses que sabem fer'>
@@ -12,4 +13,5 @@ import Layout from '../layouts/Layout.astro';
   <Servei nomServei="Testeig" contingut="Fem les proves a nivell d'usuari per estar segurs que tot funciona bé"/>
   <Servei nomServei="Manteniment" contingut="Mantenim el nostre lloc web de manera continuada i apliquem millores"/>
   <Servei />
+  <BotoReton/>
 </Layout>
