--- a/curs-fazt/src/pages/sobreNosaltres.astro
+++ b/curs-fazt/src/pages/sobreNosaltres.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
-
+import BotoReton from '../components/BotoReton.astro';
 ---
 
 <Layout titolPagina="Sobre nosaltres" descripcioPàgina="Sobre nosaltres i les nostres vides">
 	<h2>Sobre el nostre lloc web</h2>
 	<p>Elaborat per llopFilms &copy;2023</p>
+	<BotoReton/>
 </Layout>
